adjusted tests